--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,35 @@
 venv
 .env
+*.env
+.env.local
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
+# FAISS index files
+*.faiss
+*.pkl
+id_map.pkl
+cv_index.faiss
+
+# Data directories
+data/
+logs/
+*.log
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Docker
+.dockerignore
